--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --background-color: #ececec;
-    --accent-color: #FFFFFF;
+    --accent-color: #deb065;
 }
 
 * {
@@ -78,14 +78,36 @@
     margin-bottom: 20px;
 }
 
-/* .form-content{
-    
-} */
+
 
 form{
     background-color: white;
-    box-shadow: 2px 2px 2px gray;
+    box-shadow: 2px 2px 10px rgb(167, 167, 167);
     padding: 20px 15rem 20px 2rem;
+
+    position: relative;
+}
+
+.account {
+    margin-left: 2rem;
+    font-size: 14px;
+}
+
+button {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 10px 30px;
+    text-align: center;
+    font-size: 13px;
+    width: auto;
+    background-color: var(--accent-color);
+    border-radius: 10px;
+    border: none;
+}
+
+a{
+    text-decoration: none;
+    color: var(--accent-color);
 }
 
 form ul {
@@ -104,18 +126,16 @@ form ul li {
 label, input{
     display: flex;
     flex-direction: column;
-    /* flex-wrap: wrap; */
 }
 
 label {
     font-family: 'Nunito', sans-serif;
     font-size: 10px;
+    margin-bottom: 3px;
+    display: block;
 }
 
-form input[type="text"], 
-form input[type="email"],
-form input[type="number"],
-form input[type="password"]
+form input
     {
         background-color: #FFFFFF;
         border: 1px solid #D6D9DC;
@@ -125,3 +145,9 @@ form input[type="password"]
         width: 80%;
         margin-bottom: 15px;
     }
+
+form input:focus, form input:active{
+    outline: 2px solid #489aeb;
+    border-radius: 3px;
+    box-shadow: 1px 1px 10px rgb(167, 167, 167);
+}
