Add password match logic

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --background-color: #ececec;
-    --accent-color: #deb065;
+    --accent-color: #3d5838;
 }
 
 * {
@@ -20,7 +20,7 @@
 }
 
 .left {
-    background-image: url(./japan.jpg);
+    background-image: url(./green.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -103,6 +103,11 @@ button {
     background-color: var(--accent-color);
     border-radius: 10px;
     border: none;
+    color: #ffffff;
+}
+
+button:hover{
+    cursor: pointer;
 }
 
 a{
@@ -150,4 +155,8 @@ form input:focus, form input:active{
     outline: 2px solid #489aeb;
     border-radius: 3px;
     box-shadow: 1px 1px 10px rgb(167, 167, 167);
+}
+
+form.submitted input:invalid{
+    outline: 2px solid red;
 }
