--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --background-color: #ececec;
-    --accent-color: #3d5838;
+    --accent-color: #821b27;
 }
 
 * {
@@ -20,7 +20,7 @@
 }
 
 .left {
-    background-image: url(./green.jpg);
+    background-image: url(./copenhagen.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -159,5 +159,5 @@ form input:focus, form input:active{
 
 .password-match{
     font-size: 11px;
-    color: red;
+    color: #c72132;
 }
